--- a/oracle19.3/dbconfig-tmplate/ORACLE19CDB/listener.ora.tmpl
+++ b/oracle19.3/dbconfig-tmplate/ORACLE19CDB/listener.ora.tmpl
@@ -15,25 +15,13 @@ SID_LIST_LISTENER=
  
      (SID_DESC =
  
-      (GLOBAL_DBNAME = marktest)
+      (GLOBAL_DBNAME = oracle19cdb)
  
       (ORACLE_HOME = /opt/oracle/product/19c/dbhome_1)
  
-      (SID_NAME = marktest)
+      (SID_NAME = oracle19cdb)
  )
 )
- 
-#     (SID_DESC =
-#
-#      (GLOBAL_DBNAME = marktestdb)
-#
-#      (ORACLE_HOME = /home/u01/app/oracle/product/11.2.0/dbhome_1)
-#
-#      (SID_NAME = marktestdb)
-#
-#    )
-#
-#  )
- 
+  
  
 ADR_BASE_LISTENER = /opt/oracle
