--- a/oracle19.3/dbconfig-tmplate/ORACLE19CDB/listener.ora.tmpl
+++ b/oracle19.3/dbconfig-tmplate/ORACLE19CDB/listener.ora.tmpl
@@ -15,11 +15,11 @@ SID_LIST_LISTENER=
  
      (SID_DESC =
  
-      (GLOBAL_DBNAME = oracle19cdb)
+      (GLOBAL_DBNAME = ora19c)
  
       (ORACLE_HOME = /opt/oracle/product/19c/dbhome_1)
  
-      (SID_NAME = oracle19cdb)
+      (SID_NAME = ora19c)
  )
 )
   
