--- a/oracle19.3/dbconfig-tmplate/ORACLE19CDB/initORACLE19CDB.ora.tmpl
+++ b/oracle19.3/dbconfig-tmplate/ORACLE19CDB/initORACLE19CDB.ora.tmpl
@@ -1,35 +1,35 @@
-ORACLE19CDB.__data_transfer_cache_size=0
-ORACLE19CDB.__db_cache_size=37312528384
-ORACLE19CDB.__inmemory_ext_roarea=0
-ORACLE19CDB.__inmemory_ext_rwarea=0
-ORACLE19CDB.__java_pool_size=0
-ORACLE19CDB.__large_pool_size=671088640
-ORACLE19CDB.__oracle_base='/opt/oracle'#ORACLE_BASE set from environment
-ORACLE19CDB.__pga_aggregate_target=10737418240
-ORACLE19CDB.__sga_target=42949672960
-ORACLE19CDB.__shared_io_pool_size=134217728
-ORACLE19CDB.__shared_pool_size=4697620480
-ORACLE19CDB.__streams_pool_size=0
-ORACLE19CDB.__unified_pga_pool_size=0
-*.audit_file_dest='/opt/oracle/oradata/admin/ORACLE19CDB/adump'
+ORA19C.__data_transfer_cache_size=0
+ORA19C.__db_cache_size=37312528384
+ORA19C.__inmemory_ext_roarea=0
+ORA19C.__inmemory_ext_rwarea=0
+ORA19C.__java_pool_size=0
+ORA19C.__large_pool_size=671088640
+ORA19C.__oracle_base='/opt/oracle'#ORACLE_BASE set from environment
+ORA19C.__pga_aggregate_target=10737418240
+ORA19C.__sga_target=42949672960
+ORA19C.__shared_io_pool_size=134217728
+ORA19C.__shared_pool_size=4697620480
+ORA19C.__streams_pool_size=0
+ORA19C.__unified_pga_pool_size=0
+*.audit_file_dest='/opt/oracle/oradata/admin/ORA19C/adump'
 *.audit_sys_operations=false
 *.audit_trail='none'
 *.compatible='19.0.0'
-*.control_files='/opt/oracle/oradata/ORACLE19CDB/control01.ctl'
+*.control_files='/opt/oracle/oradata/ORA19C/control01.ctl'
 *.db_block_size=8192
-*.db_name='ORACLE19CDB'
+*.db_name='ORA19C'
 *.db_recovery_file_dest_size=107374182400
 *.db_recovery_file_dest='/opt/oracle/oradata/fast_recovery_area'
 *.diagnostic_dest='/opt/oracle'
 *.disk_asynch_io=TRUE
-*.dispatchers='(PROTOCOL=TCP) (SERVICE=ORACLE19CDBXDB)'
-*.fal_client='ORACLE19CDB'
-*.fal_server='ORACLE19CDB1'
+*.dispatchers='(PROTOCOL=TCP) (SERVICE=ORA19CXDB)'
+*.fal_client='ORA19C'
+*.fal_server='ORA19CDB'
 *.filesystemio_options='SETALL'
 *.local_listener=''
-*.log_archive_config='dg_config=(oracle19cdb,oracle19cdb1)'
-*.log_archive_dest_1='LOCATION=USE_DB_RECOVERY_FILE_DEST  VALID_FOR=(ALL_LOGFILES,ALL_ROLES)  DB_UNIQUE_NAME=oracle19cdb'
-*.log_archive_dest_2='SERVICE=oracle19cdb LGWR SYNC  VALID_FOR=(ONLINE_LOGFILES,PRIMARY_ROLE)  DB_UNIQUE_NAME=oracle19cdb1'
+*.log_archive_config='dg_config=(ora19c,ora19cdb)'
+*.log_archive_dest_1='LOCATION=USE_DB_RECOVERY_FILE_DEST  VALID_FOR=(ALL_LOGFILES,ALL_ROLES)  DB_UNIQUE_NAME=ora19c'
+*.log_archive_dest_2='SERVICE=ora19c LGWR SYNC  VALID_FOR=(ONLINE_LOGFILES,PRIMARY_ROLE)  DB_UNIQUE_NAME=ora19cdb'
 *.log_archive_dest_state_1='ENABLE'
 *.log_archive_dest_state_2='ENABLE'
 *.log_archive_max_processes=30
