--- a/oracle19.3/dbconfig-tmplate/ORACLE19CDB1/listener.ora.tmpl
+++ b/oracle19.3/dbconfig-tmplate/ORACLE19CDB1/listener.ora.tmpl
@@ -15,11 +15,11 @@ SID_LIST_LISTENER=
  
      (SID_DESC =
  
-      (GLOBAL_DBNAME = oracle19cdb1)
+      (GLOBAL_DBNAME = ora19cdb)
  
       (ORACLE_HOME = /opt/oracle/product/19c/dbhome_1)
  
-      (SID_NAME = oracle19cdb1)
+      (SID_NAME = ora19cdb)
  )
 )
  
