--- a/oracle19.3/dbconfig-tmplate/ORA19C/listener.ora.tmpl
+++ b/oracle19.3/dbconfig-tmplate/ORA19C/listener.ora.tmpl
@@ -19,7 +19,7 @@ SID_LIST_LISTENER=
  
       (ORACLE_HOME = /opt/oracle/product/19c/dbhome_1)
  
-      (SID_NAME = ora19c)
+      (SID_NAME = ORA19C)
  )
 )
   
