--- a/oracle19.3/dbconfig-tmplate/ORA19C/tnsnames.ora.tmpl
+++ b/oracle19.3/dbconfig-tmplate/ORA19C/tnsnames.ora.tmpl
@@ -6,7 +6,7 @@ ORA19C =
     (ADDRESS = (PROTOCOL = TCP)(HOST = oracle19c-master)(PORT = 1521))
     (CONNECT_DATA =
       (SERVER = DEDICATED)
-      (SERVICE_NAME = ora19c)
+      (SERVICE_NAME = ORA19C)
     )
   )
  
@@ -15,6 +15,7 @@ ORA19CDB =
     (ADDRESS = (PROTOCOL = TCP)(HOST = oracle19c-slave)(PORT = 1522))
     (CONNECT_DATA =
       (SERVER = DEDICATED)
-      (SERVICE_NAME = ora19cdb)
+      (SERVICE_NAME = ORA19CDB)
     )
   )
+
