--- a/oracle18.3/dockerfiles/18.3.0/.bash_profile.tmpl
+++ b/oracle18.3/dockerfiles/18.3.0/.bash_profile.tmpl
@@ -8,6 +8,7 @@ fi
 # User specific environment and startup programs
 
 PATH=$PATH:$HOME/.local/bin:$HOME/bin
+#export TERM=dumb
 
 export PATH
 
@@ -17,7 +18,7 @@ ORACLE_SID=###ORACLE_SID###; export ORACLE_SID
 ORACLE_UNQNAME=###ORACLE_UNQNAME###; export ORACLE_UNQNAME
 JAVA_HOME=/usr/java; export JAVA_HOME
 ORACLE_BASE=/opt/oracle; export ORACLE_BASE
-ORACLE_HOME=$ORACLE_BASE/product/19c/dbhome_1; export ORACLE_HOME
+ORACLE_HOME=$ORACLE_BASE/product/18c/dbhome_1; export ORACLE_HOME
 ORACLE_PATH=/home/u01/app/common/oracle/sql; export ORACLE_PATH
 ORACLE_TERM=xterm; export ORACLE_TERM
 NLS_DATE_FORMAT="YYYY-MM-DD HH24:MI:SS"; export NLS_DATE_FORMAT
