--- a/oracle19.3/dockerfiles/19.3.0/dbca.rsp.tmpl
+++ b/oracle19.3/dockerfiles/19.3.0/dbca.rsp.tmpl
@@ -59,7 +59,7 @@ sid=###ORACLE_SID###
 # Default value : 0
 # Mandatory     : No
 #-----------------------------------------------------------------------------
-numberOfPDBs=1
+#numberOfPDBs=1
 
 #-----------------------------------------------------------------------------
 # Name          : pdbName 
